[package]
name = "advent-of-code-2016-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"

[[bin]]
name = "01_a"
path = "src/bin/01/a.rs"

[[bin]]
name = "01_b"
path = "src/bin/01/b.rs"

[[bin]]
name = "02_a"
path = "src/bin/02/a.rs"

[[bin]]
name = "02_b"
path = "src/bin/02/b.rs"

[[bin]]
name = "03_a"
path = "src/bin/03/a.rs"

[[bin]]
name = "03_b"
path = "src/bin/03/b.rs"

[[bin]]
name = "04_a"
path = "src/bin/04/a.rs"

[[bin]]
name = "04_b"
path = "src/bin/04/b.rs"
